--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Official site of the UMBC Linux Users Group (umbclug). Find all
   our talks and announcements here.
 
-# url: 'https://lug.umbc.edu'
-url: 'https://umbc-linux-users-group.github.io/umbclug.github.io/
+url: 'https://umbc-linux-users-group.github.io/umbclug.github.io/'
 # Build settings
 markdown: kramdown
 permalink: pretty # no .html extension needed/wanted
